Fixiing doctor menu

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,9 @@ jspm_packages/
 vittamed-production-package/
 .next/cache/webpack/
 vittamed-production-package/
+supabase/migrations/🔑 Credenciales Demo de VittaMed
+supabase/migrations/Despues de hacer el register business me redirige
+.gitignore
+supabase/migrations/Tengo algunas mejoras:
+supabase/migrations/Titular: Cusco Beer Company
+supabase/migrations/Necesito que confirmes si estos endpoints existen
