--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sharp": "^0.34.4",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "twilio": "^5.10.0",
