feat: add vittasami.lat → app.vittasami.lat redirect
- Added new server block in nginx config for vittasami.lat redirect
- Handles both HTTP and HTTPS with SSL certificates
- Redirects all traffic to app.vittasami.lat
- Created comprehensive deployment guide with:
  - SSL certificate generation steps
  - Config deployment instructions
  - Verification tests
  - Troubleshooting section

Fixes: vittasami.lat returning backend /get response

--- a/docs/nginx-sites-available-vittasami.conf
+++ b/docs/nginx-sites-available-vittasami.conf
@@ -29,6 +29,25 @@ upstream vittasami_app {
 }
 
 # =========================================
+# VITTASAMI.LAT → APP.VITTASAMI.LAT Redirect
+# =========================================
+server {
+    listen 80;
+    listen [::]:80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name vittasami.lat www.vittasami.lat;
+
+    # SSL Configuration (if accessed via HTTPS)
+    ssl_certificate /etc/letsencrypt/live/vittasami.lat/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vittasami.lat/privkey.pem;
+    include snippets/ssl-params.conf;
+
+    # Redirect everything to app.vittasami.lat
+    return 301 https://app.vittasami.lat$request_uri;
+}
+
+# =========================================
 # HTTP → HTTPS Redirect
 # =========================================
 server {
