chore: configure Vercel deployment for staging environment
- Add GitHub Actions workflows for staging and production
- Create comprehensive deployment strategy documentation
- Configure Vercel with environment variables
- Add quick-start deployment guide
- Update vercel.json with security headers and ignore command

Tech Lead: Setup complete 3-environment architecture (dev/staging/prod)

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
+  "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "framework": "nextjs",
   "regions": ["iad1"],
+  "env": {
+    "NODE_ENV": "production"
+  },
+  "build": {
+    "env": {
+      "NEXT_TELEMETRY_DISABLED": "1"
+    }
+  },
   "functions": {
     "src/app/api/process-reminders/route.ts": {
       "maxDuration": 300
@@ -48,5 +57,6 @@
       "source": "/api/webhooks/stripe",
       "destination": "/api/payments/webhook"
     }
-  ]
+  ],
+  "ignoreCommand": "bash -c '[[ \"$VERCEL_GIT_COMMIT_REF\" == \"main\" ]] && exit 1 || exit 0'"
 }
