--- a/vercel.json
+++ b/vercel.json
@@ -58,5 +58,5 @@
       "destination": "/api/payments/webhook"
     }
   ],
-  "ignoreCommand": "bash -c '[[ \"$VERCEL_GIT_COMMIT_REF\" == \"main\" ]] && exit 1 || exit 0'"
+  "ignoreCommand": "if [ \"$VERCEL_GIT_COMMIT_REF\" = \"main\" ]; then exit 1; else exit 0; fi"
 }
