--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:all": "npm run test:unit:run && npm run test:e2e"
+    "test:all": "npm run test:unit:run && npm run test:e2e",
+    "seed:icd10": "ts-node scripts/seed-icd10.ts"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
@@ -31,17 +32,20 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^7.0.1",
     "bcryptjs": "^3.0.2",
+    "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "context7": "^1.0.3",
+    "culqi-node": "^2.1.0",
     "framer-motion": "^12.23.16",
+    "glob": "^11.0.3",
     "jose": "^6.1.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^16.0.3",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sharp": "^0.34.4",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
